--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,5 +13,5 @@ mybatis.type-aliases-package=com.infosys.oracle.model
 mybatis.configuration.map-underscore-to-camel-case=true
 
 #\u65E5\u5FD7
-logging.file=/var/log/oracle-cli.log
+logging.file=/var/log/oracle
 logging.level.root=INFO
